@@ -1240,6 +1240,24 @@ literal|0
 index|]
 argument_list|)
 decl_stmt|;
+comment|// pull the row key out of the path
+name|String
+name|row
+init|=
+name|URLDecoder
+operator|.
+name|decode
+argument_list|(
+name|pathSegments
+index|[
+literal|2
+index|]
+argument_list|,
+name|HConstants
+operator|.
+name|UTF8_ENCODING
+argument_list|)
+decl_stmt|;
 switch|switch
 condition|(
 name|ContentType
@@ -1261,6 +1279,8 @@ case|:
 name|putRowXml
 argument_list|(
 name|table
+argument_list|,
+name|row
 argument_list|,
 name|request
 argument_list|,
@@ -1305,6 +1325,9 @@ name|putRowXml
 parameter_list|(
 name|HTable
 name|table
+parameter_list|,
+name|String
+name|row
 parameter_list|,
 specifier|final
 name|HttpServletRequest
@@ -1443,10 +1466,7 @@ init|=
 operator|new
 name|Text
 argument_list|(
-name|pathSegments
-index|[
-literal|2
-index|]
+name|row
 argument_list|)
 decl_stmt|;
 name|lock_id
@@ -2351,16 +2371,31 @@ name|pathSegments
 argument_list|)
 argument_list|)
 decl_stmt|;
+comment|// pull the row key out of the path
+name|String
+name|row
+init|=
+name|URLDecoder
+operator|.
+name|decode
+argument_list|(
+name|pathSegments
+index|[
+literal|2
+index|]
+argument_list|,
+name|HConstants
+operator|.
+name|UTF8_ENCODING
+argument_list|)
+decl_stmt|;
 name|Text
 name|key
 init|=
 operator|new
 name|Text
 argument_list|(
-name|pathSegments
-index|[
-literal|2
-index|]
+name|row
 argument_list|)
 decl_stmt|;
 name|String
